Fix alignment, truncating of text and add tooltip

--- a/frontend/src/style/styles.scss
+++ b/frontend/src/style/styles.scss
@@ -380,10 +380,24 @@ table.okr-table {
 }
 
 .keyResult-checkbox {
-  .mdc-label {
-    background: $soft-grey;
-    padding: 4px 4px 4px 4px;
+  display: flex;
+  align-items: center;
+
+  span {
+    display: inline-block;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: 100%;
   }
+
+  .mdc-label {
+    overflow: hidden;
+    width: 100%;
+    background: $soft-grey;
+    padding: 4px;
+  }
+
   .mdc-form-field {
     width: 100%;
   }
